# rust-engine

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
assets/shaders/builtin/: object.frag.slang  object.vert.slang
engine/: entry.rs  game.rs  lib.rs
engine/core/: application.rs  errors.rs  logger.rs  mod.rs
engine/core/application/: application_event_listeners.rs  mod.rs
engine/core/application/event_listeners/: mod.rs  on_key_pressed.rs  on_key_released.rs  on_quit.rs  on_resize.rs
engine/core/debug/: clock.rs  errors.rs  mod.rs
engine/core/systems/: events.rs  logger.rs  mod.rs
engine/core/systems/input/: keyboard.rs  mod.rs  mouse.rs
engine/platform/: mod.rs  platform.rs  platform_linux.rs
engine/renderer/: mod.rs  renderer_backend.rs  renderer_frontend.rs  renderer_types.rs
engine/renderer/scene/: camera.rs
engine/renderer/utils/: color.rs  mod.rs  render_area.rs
engine/renderer/vulkan/: mod.rs  vulkan_backend.rs  vulkan_renderer_backend.rs  vulkan_types.rs  vulkan_utils.rs
engine/renderer/vulkan/vulkan_init/: allocator.rs  command_buffer.rs  command_pool.rs  debug.rs  device.rs  entry.rs  framebuffer.rs  instance.rs  mod.rs  objects.rs  physical_device.rs  renderpass.rs  shaders.rs  surface.rs  swapchain.rs  sync_structures.rs
engine/renderer/vulkan/vulkan_pipelines/: pipeline.rs
engine/renderer/vulkan/vulkan_shaders/: mod.rs  shader.rs
engine/renderer/vulkan/vulkan_utils/: buffer.rs  fence.rs  image.rs  mod.rs  pipeline.rs  semaphore.rs  (+1 more)
engine/resources/: texture.rs
test_bed/: main.rs
test_bed/src/: camera.rs  game.rs
(+7 files in other folders)
