[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38.0"
glam = "0.28.0"
once_cell = "1.19.0"
xcb = "1.4.0"
xcb-util = { version = "0.4.0", features = ["keysyms"] }

[[bin]]
name = "test-bed"
path = "test_bed/main.rs"

[lib]
name = "engine"
path = "engine/lib.rs"
